Fixed how livecaptures are stored and the ratelimiter
Signed-off-by: Karan Bhakta <kabhakta@amazon.com>